# pgvector-bench

./: .env  .env.example  CLAUDE.md  README.md  analyze_queries.py  bench.py  benchmark.py  benchmark_joins.py  compare_latency.py  docker-compose.yml  embedding.py  llm.py  models.py  pre-bench.py  pyproject.toml  query.py  query_analysis.py  schemas.py  setup.py
data/: benchmark_20250826_132643.csv  benchmark_20250826_132643.json  benchmark_20250826_154902.csv  benchmark_20250826_154902.json
query-analyses/: hybrid_denorm_no_filter.txt  hybrid_denorm_user_filter.txt  hybrid_join_user_filter.txt  summary.txt  text_denorm_jsonb_filter.txt  text_denorm_no_filter.txt  text_denorm_user_filter.txt  text_join_no_filter.txt  text_join_user_filter.txt  vector_denorm_composite_filter.txt  vector_denorm_force_index.txt  vector_denorm_jsonb_filter.txt  vector_denorm_no_filter.txt  vector_denorm_user_filter.txt  vector_join_jsonb_filter.txt  vector_join_no_filter.txt  vector_join_no_nestloop.txt  vector_join_user_filter.txt
sql-explain/: hybrid-search-explain.txt  query_analysis_20250826_184047.txt  semantic-search-explain.txt  text-search-explain.txt
sql-out/: benchmark_results_20250826_193648.csv  benchmark_results_20250826_195834.csv  benchmark_results_20250826_200807.csv  benchmark_results_20250826_200955.csv  hybrid_search_explain_20250826_010402.txt  query_analysis_20250826_160254.txt  text_search_explain_20250826_010402.txt  vector_search_explain_20250826_010402.txt
